Updates to evaluation

--- a/src/quori_face_generator/CMakeLists.txt
+++ b/src/quori_face_generator/CMakeLists.txt
@@ -8,7 +8,7 @@ project(quori_face_generator)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  rosbridge_server
+  ## rosbridge_server
 )
 
 ## System dependencies are found with CMake's conventions
